--- a/aggregator/Cargo.toml
+++ b/aggregator/Cargo.toml
@@ -7,8 +7,7 @@ edition = "2021"
 
 [dependencies]
 async-trait = "0.1"
-bson = { version = "2.6", features = ["chrono-0_4"] }
-chrono = "0.4"
+bson = "2.6"
 futures = "0.3"
 graphql_client = "0.12"
 headless_chrome = "1.0"
